Iniziale inserimento licenza GPL e correzioni checkstyle