@@ -1,3 +1,20 @@
+/*
+ * Copyright (C) 2021  Consiglio Nazionale delle Ricerche
+ *
+ *     This program is free software: you can redistribute it and/or modify
+ *     it under the terms of the GNU Affero General Public License as
+ *     published by the Free Software Foundation, either version 3 of the
+ *     License, or (at your option) any later version.
+ *
+ *     This program is distributed in the hope that it will be useful,
+ *     but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *     GNU Affero General Public License for more details.
+ *
+ *     You should have received a copy of the GNU Affero General Public License
+ *     along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ */
+
 package synch.perseoconsumers.office;
 
 import com.google.common.base.Function;
@@ -11,21 +28,15 @@ import com.google.common.util.concurrent.ListenableFuture;
 import com.google.common.util.concurrent.MoreExecutors;
 import com.google.gson.Gson;
 import com.google.gson.JsonSyntaxException;
-
 import helpers.rest.ApiRequestException;
-
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ExecutionException;
-
 import lombok.extern.slf4j.Slf4j;
-
 import models.Institute;
 import models.Office;
-
 import play.libs.WS;
 import play.libs.WS.HttpResponse;
-
 import synch.perseoconsumers.AnagraficaApis;
 
 @Slf4j
@@ -182,7 +193,7 @@ public class OfficePerseoConsumer {
   private Institute epasConverter(PerseoInstitute perseoInstitute) {
 
     Institute institute = new Institute();
-    institute.perseoId = new Long(perseoInstitute.id);
+    institute.perseoId = Long.valueOf(perseoInstitute.id);
     institute.cds = perseoInstitute.cds;
     institute.name = perseoInstitute.name;
     institute.code = perseoInstitute.code;
@@ -204,7 +215,7 @@ public class OfficePerseoConsumer {
       }
 
       Office office = new Office();
-      office.perseoId = new Long(perseoOffice.id);
+      office.perseoId = Long.valueOf(perseoOffice.id);
       office.codeId = perseoOffice.codeId;
       office.code = perseoOffice.code;
       office.name = perseoOffice.shortName;
